<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ServiceCenterApp</string>
    <string name="awb_2036456682">AWB: 2036456682</string>
    <string name="order_id_as12036456">Order ID: AS12036456</string>
    <string name="product_images">Product Images</string>
    <string name="product_description"><![CDATA[TURMS Men\'s Cotton Linen Mandarin Collar Shirt | Anti Stain & Anti Odor | Mens Shirts Dark shade of red-orange]]></string>
    <string name="quality_check">Quality Check</string>
    <string name="qc_passed">QC Passed</string>
    <string name="qc_failed">QC Failed</string>
    <string name="question_1_of_4">Question 1 of 4</string>
    <string name="question_2_of_4">Question 2 of 4</string>
    <string name="question_3_of_4">Question 3 of 4</string>
    <string name="quastion_4_of_4">Question 4 of 4</string>
    <string name="image_match">Image match?</string>
    <string name="description">Description</string>
    <string name="description_content">Turms men’s cotton linen mandarin collar shirt</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="qc_button_text">Check Images clicked by Agent</string>
    <string name="enter_degits">Enter digits</string>
    <string name="submit">Submit</string>
    <string name="check_image">Check front image of the product before packaging</string>
    <string name="retake">Retake</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_last_5_digits">Enter the last 5 digits of the IMEI number</string>
    <string name="reattempt">Re-Attempt Pick-Up</string>
    <string name="reattempt_">ReAttempt</string>
    <string name="check_images_by_agent">Check Images By Agent</string>
    <string name="scan_shipment_label">Scan Shipment Label</string>
    <string name="scan_next_shipment">Scan Next Shipment</string>
    <string name="front_image">Capture Front Image</string>
    <string name="back_image">Capture Back Image</string>
    <string name="zoom_image"><u>Zoom image</u></string>
    <string name="side_image">Capture Back Image</string>
    <string name="flyer_linking">Flyer Linking</string>
    <string name="capture_image_after_packaging">Capture Image After Packaging</string>
    <string name="successfully_linked_with_flyer">Successfully verified Flyer Barcode with Shipment Label</string>
    <string name="image_after_packing">Successfully Clicked The Image After Packing</string>
    <string name="select_reason">Select Reason</string>
    <string name="exempt_qc">Exempt QC</string>
    <string name="emp_name">Rakesh Kumar</string>
    <string name="mobile_no">Mobile: 9990000999</string>
    <string name="emp_code">Emp. Code:</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="dc">DC:</string>
    <string name="role">Role</string>
    <string name="manager">Manager</string>
    <string name="last_login">Last Login</string>
    <string name="dc_info">IHQ-IT</string>
    <string name="role_info">DC Head</string>
    <string name="manager_info">Pushpol Roy</string>
    <string name="last_login_info">24/5/23 6:54 PM</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="forgot_pwd_instruction">Do not worry! We will help you recover your password.</string>
    <string name="employee_code">Employee Code</string>
    <string name="send_otp_">Send Code</string>
    <string name="sign_in">Sign in</string>
    <string name="login_instruction"><![CDATA[Login with employee \ncode & password]]></string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot password</string>
    <string name="forget_passwords"><u>Forgot Password?</u></string>
    <string name="otp_verification">OTP verification</string>
    <string name="resend_otp_statement">We have sent a verification OTP to \n+91 xxxxxxxxxx. Didn\'t receive? </string>
    <string name="Did_receive">+91 xxxxxxxxxx.Didn\'t receive? <font color='#BA3838'></font></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="auto_fetching_otp">Auto fetching OTP...</string>
    <string name="update_pwd_heading">Create New Password</string>
    <string name="password">Password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="kavach">Kavach</string>
    <string name="password_info">Enter at least 8 characters, 1 uppercase character and 1 numeric character</string>
    <string name="service_center">Service Center</string>
    <string name="resend_otp_via">Resend OTP via \t</string>
    <string name="sms_in_sec"> SMS in 54 seconds.</string>
    <string name="total_rvp_pending">Total RVP Pending</string>
    <string name="_95400">95400</string>
    <string name="password_reset_successfully">Password Reset Successfully</string>
    <string name="scan_shipment">Scan Flyer Barcode</string>
    <string name="regex_vaidation">Wrong AWB(AirWayBill) Number.</string>
    <string name="scan_label">Scan Correct Shipment Label</string>
    <string name="_9">9</string>
    <string name="rvp_validation_flyer_linking">RVP Validation Flyer Linking</string>
    <string name="well_done">Well Done!</string>
    <string name="successful">Successful!</string>
    <string name="try_next_one">Try Next One</string>
    <string name="error">Error!</string>
    <string name="warning">Warning</string>
    <string name="already_linked">Already Linked</string>
    <string name="ss">SS</string>
    <string name="mobile">Mobile Number</string>
    <string name="awb">AWB: </string>
    <string name="order_id">Order ID: </string>
    <string name="scan_next_shipment_">Scan Next Shipment</string>
    <string name="rvp_shipment_validiation">RVP Shipment\nValidation</string>
    <string name="rvp_shipment_validiation_toolbar">RVP Shipment Validation</string>
    <string name="failed_shipments">Failed shipments</string>
    <string name="pending_shipments">Pending shipments</string>
    <string name="product_details">Product Details</string>
    <string name="does_the_image_match">Does the FE/ESP clicked Image match with Catalogue Image?</string>
    <string name="image_capture_by_fe_is_clear">Are the FE/ESP clicked Images clear?</string>
    <string name="is_the_flyer_properly_sealed">Is the flyer sealed at the Customer Doorstep?</string>
    <string name="verfication_code">Verification Code</string>
    <string name="enter_verfication_code">Enter verification code</string>
    <string name="verify_code">Verify Code</string>
    <string name="get_code">Get Code</string>
    <string name="scan_shipment_through_awb_flyer_barcode">Scan Shipment through AWB/Flyer barcode</string>
    <string name="resend_code"><u><font color="#158BF8">Resend code</font></u></string>
    <string name="enter_the_6_digit">Please enter the 6 digit verification code sent to </string>
    <string name="i_didn_t_receive_a_code">I didn’t receive a code</string>
    <string name="create_new_password">Create new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="rvp_shipment_validation" tools:ignore="ExtraTranslation">RVP Shipment \n Validation</string>
    <string name="completed_shipments">Completed Shipments</string>
    <string name="quailty_check">Quailty check</string>
    <string name="start_qc">Start QC</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="location_type">Location/Type</string>
    <string name="print_label">Print Label</string>
    <string name="emp_Name">name</string>
    <string name="price_tag_missing">Price tag missing</string>
    <string name="profile">Profile</string>
    <string name="next">Next</string>
    <string name="qc_failed_due_to">QC failed due to</string>
    <string name="re_attempt_pick_up">Re-attempt pick-up</string>
    <string name="you_have_denied_the_required_permission_please_grant_to_proceed_further">You have denied the required permission. Please grant to proceed further!</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="flyer_code_scanned_now_scan_awb_no">Flyer Code Scanned \n Now Scan Shipment Label</string>
    <string name="flyer_code_not_in_the_pending_list">Not Eligible for L2 Validation</string>
    <string name="l2_validation_success">L2 Validation Successful</string>
    <string name="awb_no_is_not_matched_with_flyer_code">AWB No is not Matched with Flyer Code</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="shipment_label_not_readable"><![CDATA[If Shipment Label not readable, take Re-print from SCADi2\n\n(Last Mile -> Tally -> RVP Label Print)]]></string>
    <string name="successfully_verified_desciption">Successfully verified Flyer Barcode with Shipment Label</string>
    <string name="failure_barcode_description">Flyer Barcode mismatched with Shipment Label</string>
    <string name="failed_shipment">Failed Shipments</string>
    <string name="if_barcode_not_readable_raise_an_slp_ticket">If Barcode not readable, Raise an SLP Ticket</string>
    <string name="is_your_product_image_clear">Is your flyer image clear?</string>
    <string name="image_clear_or_not">Please make sure the image is clear and your entire product is visible</string>
    <string name="upload">Upload</string>
    <string name="you_can_t_go_back">You Can\'t Go Back</string>
    <string name="no_internet">Internet Not Available</string>
    <string name="under_development">Under Development</string>
    <string name="access_denied">Access denied</string>
    <string name="take_re_print_from_scadi2_last_mile_tally_rvp_label_print"><![CDATA[Take Re-print from SCADi2 \n (Last Mile -> Tally -> RVP Label Print)]]></string>
    <string name="netwrk_error">Network Error</string>
    <string name="you_have_connectivity_issue_check_your_network">You have connectivity issue..\nCheck Your Network</string>
    <string name="ok">OK</string>
    <string name="okay">Okay</string>
    <string name="no_data_found">No Data Found</string>
    <string name="fetching_data">Fetching  Data From DB</string>
    <string name="fe_captured_image">FE Captured Image</string>
    <string name="customer_image">Customer Image</string>
    <string name="is_your_shipment_label_image_clear">Is your Shipment Label image clear?</string>
    <string name="capture_shipment_label_image">Capture Shipment Label Image</string>
    <string name="click_product_images">Click Product Images</string>
    <string name="back">Back</string>
    <string name="raise_an_slp_ticket">Raise an SLP Ticket</string>
    <string name="rider">Rider :</string>
    <string name="call_consignee">Call Consignee</string>
    <string name="correct">Correct</string>
    <string name="fake">Fake</string>
    <string name="consignee_requested_to">Consignee Requested to</string>
    <string name="re_attempt">Re-Attempt</string>
    <string name="mark_ud_validation">Mark UD Validation</string>
    <string name="schedule_reattempt_shipment">Schedule Reattempt Shipment</string>
    <string name="remarks_landmarks">Remarks/Landmarks</string>
    <string name="remark">Remarks</string>
    <string name="go_to_pending_list">Go to Pending List</string>
    <string name="consignee_not_reachable">Consignee Not Reachable</string>
    <string name="do_you_want_to_cancel_the_current_sal_tally_process">Do you want to cancel the Current SAL Tally Process?</string>
    <string name="sal_tally_already_done">SAL Tally already done</string>
</resources>