<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_rectangle_white_two_side">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20DP"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_1A"
                android:src="@drawable/camera_cross"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_your_product_image_clear"
                android:textColor="@color/black_1A"
                android:textSize="@dimen/_21SP"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_cross" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_prdct_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20DP"
                android:text="@string/image_clear_or_not"
                android:textColor="@color/black_1A"
                android:textSize="@dimen/_18SP"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintTop_toBottomOf="@id/tv_headline" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20DP"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_prdct_clear">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_retake"
                    style="@style/buttoncommonstyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/retake"
                    android:background="@drawable/clear_filter"
                    android:textColor="@color/primary_color"
                    app:cornerRadius="@dimen/_6DP"
                    app:layout_constraintEnd_toStartOf="@+id/btn_upload"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_upload"
                    style="@style/buttoncommonstyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20DP"
                    android:backgroundTint="@color/blue"
                    android:text="@string/upload"
                    app:cornerRadius="@dimen/_6DP"
                    app:layout_constraintStart_toEndOf="@+id/btn_retake"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>