<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".app.ui.activity.auth.ForgetPasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sky_FF"
            android:padding="@dimen/_10DP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10DP"
                android:layout_marginStart="@dimen/_20DP"
                android:tint="@color/black_1A"
                android:src="@drawable/white_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_forget_pwd"
                app:layout_constraintBottom_toBottomOf="@id/tv_forget_pwd"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_forget_pwd"
                style="@style/title_text_style"
                android:padding="@dimen/_8DP"
                android:layout_marginStart="@dimen/_15DP"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/forget_password"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/_16DP"
          app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
          app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_pwd_instruction"
            style="@style/description_text_style2"
            android:layout_marginTop="@dimen/_15DP"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_pwd_instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_code"
            android:layout_marginTop="@dimen/_30DP"
            app:boxStrokeColor="@color/editext_border_color"
            android:textColorHint="@color/editext_border_color"
            app:hintTextColor="@color/black"
            app:shapeAppearance="@style/RoundedCorners"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pwd_instruction">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmployeeCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/black_1A"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_21SP"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_code"
            style="@style/custombutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20DP"
            android:padding="@dimen/_15DP"
            android:text="@string/send_otp_"
            app:layout_constraintTop_toBottomOf="@id/textField" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>