<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10DP"
        android:layout_margin="@dimen/_20DP"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/curved_rectangle_white_four_side">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_alert_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_flyer_description"
                style="@style/description_text_style"
                android:layout_width="@dimen/_0DP"
                android:textSize="@dimen/_18SP"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5DP"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_alert_box" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20DP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_main">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                style="@style/custombutton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/no"
                app:cornerRadius="@dimen/_6DP"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                style="@style/custombutton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/yes"
                app:cornerRadius="@dimen/_6DP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>